tests/errors/test_75.xpp
// Cannot access private class via import access

import "foo" as foo;

fn main() void {
	let private = foo::PrivateClass(21);

	let public = foo::PublicClass(21);
	let public_private_constructor = foo::PublicClass();


    let public_private_constructor_new = new foo::PrivateClass(21);
}
